--- a/1.0.0/ImageResizer.exe.config
+++ b/1.0.0/ImageResizer.exe.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="useDefaults" value="false" />
+    <add key="useDefaults" value="true" />
     <add key="width" value="270" />
     <add key="height" value="270" />
     <add key="imageType" value="png" />
